w6 afg 4) 5) Noah